# RustyCards

./: Cargo.toml  README.md  questions2.json
data/: phrasal_nouns.json  questions.json
src/: main.rs
