[package]
name = "rusty_cards"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "A terminal app for custom quizzes written in Rust"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0" }  # Jeśli jeszcze nie masz, to dodaj clap
rand = "0.8"
